I custimized why website a little more and added stuff to the about me

--- a/about_me.html
+++ b/about_me.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Here are some things that you can use to get to know me</h1>
+    <h2>Here are some things that you can use to get to know me</h1>
+    <p>I like to eat food, some of my favorite foods are:<br>
+    <ul>
+        <li>Chopped Cheese</li>
+    </ul>
+    <ul>
+        <li>Steak with mashed potatoes</li>
+    </ul>
+    <ul>
+        <li>Mac n Cheese</li>
+    </ul>
+</p>
+    <p>
+        <h4>About Me</h4>
+        I began to like technology when I was little, my first obsseion was phones and how they work, this inspired my curiosty about computers, the internet and anything that involves it. I joined a computer science class in my freshman year of college and learned a little bit about  coding. In my 2nd year of highschool I saw the STEAM application and saw fullstack development and instantly knew I wanted to do it.
+    </p>
+    <h5>PS: The reason why theres a mix of red, black, and the background is white is because I am from the country of Trinidad & Tobago</h5>
 </body>
 </html>
