--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liam Pustam</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    Hello!🌚
+    <h1>L&P</h1>
+    <h2>Liam Pustam</h2>
+    <h3>Hello there welcome to my website, this page is very useful if your  looking for me, it has an about me page, my contact  information and some projects I have worked on in the past.</h2>
+  
+
 </body>
 </html>
