Added info and navigation bar

--- a/about_me.html
+++ b/about_me.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
+    <div>
+        <nav>
+            <uv>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="about_me.html">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="Contact_info.html">Contact Information</a></li>
+                
+            </uv>
+        </nav>
+    </div>
+
 </head>
 <body>
+    <h1>L&P</h1>
     <h2>Here are some things that you can use to get to know me</h1>
     <p>I like to eat food, some of my favorite foods are:<br>
     <ul>
