--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="styles.css">
+    <div>
+        <nav>
+            <uv>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="about_me.html">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="Contact_info.html">Contact Information</a></li>
+                
+            </uv>
+        </nav>
+    </div>
+
 </head>
 <body>
-    <h1>These are some of the projects I have done</h1>
+    <h1>L&P</h1>
+    <h2>These are some of the projects I have done</h2>
+    <h3></h3>
 </body>
 </html>
