--- a/Contact_info.html
+++ b/Contact_info.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Info</title>
+    <link rel="stylesheet" href="styles.css">
+    <div>
+        <nav>
+            <uv>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="about_me.html">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="Contact_info.html">Contact Information</a></li>
+                
+            </uv>
+        </nav>
+    </div>
+
 </head>
 <body>
-    <h1>Contact these to reach me</h1>
+    <h1>L&P</h1>
+    <h2>Contact Information</h2>
+    <p>Phone Number: (347)358-8076 </p>
+    <p>Personal Email: liampustam@gmail.com</p>
 </body>
 </html>
