--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liam Pustam</title>
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
+ <div>
+    <nav>
+        <uv>
+            <li><a href="index.html">Home Page</a></li>
+            <li><a href="about_me.html">About me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="Contact_info.html">Contact Information</a></li>
+            
+        </uv>
+    </nav>
+</div>
 </head>
+<div>
 <body>
     <h1>L&P</h1>
     <h2>Liam Pustam</h2>
     <h3>Hello there welcome to my website, this page is very useful if your  looking for me, it has an about me page, my contact  information and some projects I have worked on in the past.</h2>
   
-
+</div>  
 </body>
 </html>
