added more to projects

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,15 @@
 </head>
 <body>
     <h1>L&P</h1>
-    <h2>These are some of the projects I have done</h2>
-    <h3></h3>
+    <h2>These are some of the projects I have done:</h2>
+    <ul>
+        <li>Creation of a PC</li>
+    </ul>
+    <ul>
+        <li>Made a text-based adventure game</li>
+    </ul>
+    <ul>
+        <li>Made a SOHO network</li>
+    </ul>
 </body>
 </html>
