added images and some pseudo code

--- a/about_me.html
+++ b/about_me.html
@@ -22,19 +22,37 @@
     <h1>L&P</h1>
     <h2>Here are some things that you can use to get to know me</h1>
     <p>I like to eat food, some of my favorite foods are:<br>
-    <ul>
-        <li>Chopped Cheese</li>
-    </ul>
-    <ul>
-        <li>Steak with mashed potatoes</li>
-    </ul>
-    <ul>
-        <li>Mac n Cheese</li>
-    </ul>
-</p>
+    </p>  
+<section class="Foods">
+<div>
+
+    <div>
+        <ul>
+            <img src="chopped.jpeg" width="150">
+            <li>Chopped Cheese</li>
+       </ul>
+    </div>
+    
+    <div>    
+        <ul>    
+            <img src="Mash.webp" width="190">
+             <li>Steak with mashed potatoes</li>
+        </ul>
+    </div>
+
+    <div>
+        <ul>
+            <img src="Mac.jpg" width="140">
+            <li>Mac n Cheese</li>
+        </ul>
+    </div>
+
+</div>
+</section>
     <p>
         <h4>About Me</h4>
         I began to like technology when I was little, my first obsseion was phones and how they work, this inspired my curiosty about computers, the internet and anything that involves it. I joined a computer science class in my freshman year of college and learned a little bit about  coding. In my 2nd year of highschool I saw the STEAM application and saw fullstack development and instantly knew I wanted to do it.
     </p>
+
 </body>
 </html>
