--- a/about_me.html
+++ b/about_me.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
-    <div>
+    <div class="navbar">
         <nav>
             <uv>
                 <li><a href="index.html">Home Page</a></li>
@@ -29,7 +29,7 @@
     <div>
         <ul>
             <img src="chopped.jpeg" width="150">
-            <li>Chopped Cheese</li>
+            <li >Chopped Cheese</li>
        </ul>
     </div>
     
