--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liam Pustam</title>
     <link rel="stylesheet" href="styles.css">
- <div>
-    <nav>
-        <uv>
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="about_me.html">About me</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="Contact_info.html">Contact Information</a></li>
-            
-        </uv>
-    </nav>
-</div>
+    <div class="navbar">
+        <nav>
+            <uv>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="about_me.html">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="Contact_info.html">Contact Information</a></li>
+                
+            </uv>
+        </nav>
+    </div>
 </head>
 <div>
 <body>
