--- a/index.html
+++ b/index.html
@@ -20,10 +20,58 @@
 </head>
 <div>
 <body>
+    <img src="image.png">
     <h1>L&P</h1>
     <h2>Liam Pustam</h2>
     <h3>Hello there welcome to my website, this page is very useful if your  looking for me, it has an about me page, my contact  information and some projects I have worked on in the past.</h2>
-  
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>1. Biography:
+        <br>
+        <h3>From a young age, I was fascinated by technology. My first obsession was with phones—how they worked, what made them run, and why they were so important in everyday life. That early curiosity quickly grew into a passion for computers, the internet, and everything related to technology.
+
+            When I entered high school, I continued to explore this interest and, by my freshman year of college, I joined a computer science class. There, I was introduced to coding for the first time, which opened up a whole new world of possibilities.
+            
+            During my second year of high school, I came across the STEAM application program. While exploring it, I discovered full-stack development, and it immediately clicked with me. I knew right away that this was the path I wanted to pursue.
+            
+            Technology has always been more than just a hobby—it’s a field that inspires my creativity, curiosity, and drive to learn more every day.</3>
+        </h2>
+
+        <br>
+        <h2>2. My contact information:
+            <br>
+            <ul>
+            Phone number: (347) 358-8076
+            <br>
+            Email Address: liamp@brooklynsteamcenter.org @
+             </ul>
+        </h2>
+        <h2>3. Certifications:
+            <br>
+            <ol>
+                a. HTML and CSS
+                <br>
+                b. Network Secruity
+            </ol>
+        </h2>
+        <h2>Resources</h2>
+        <ol>
+            <li>
+            <a href="https://docs.google.com/document/d/18HSwdFCpzpWpFSWUWrDUldZP6GsBtV5CAjSjsu7-4ww/edit?tab=t.0"><h2>1. Resume</h2></a>
+            </li>
+        </ol>
+        <ol>
+            <li>
+            <a href="https://www.linkedin.com/in/liam-pustam-a48a96342/"><h2>LinkedIn</h2></a>
+            </li>
+        </ol>
+        <ol>
+            <li>
+                <a href="https://github.com/liampustam"><h2>Github</h2></a>
+            </li>
+        </ol>
 </div>  
 </body>
 </html>
