--- a/projects.html
+++ b/projects.html
@@ -21,14 +21,23 @@
 <body>
     <h1>L&P</h1>
     <h2>These are some of the projects I have done:</h2>
-    <ul>
-        <li>Creation of a PC</li>
-    </ul>
-    <ul>
-        <li>Made a text-based adventure game</li>
-    </ul>
-    <ul>
-        <li>Made a SOHO network</li>
-    </ul>
+   <div>
+    <h2>Made a MadLibs game:
+        <br>
+        <img src="madlibs.png">
+    </h2>
+    </div>
+    <div>
+       <h2>SOHO network:</h2>
+        <img src="Soho.jpg" width="500" height="300" >
+    </div>
+    <div>
+        <h2>
+            <a href="https://ecobloom.e-lusive.tech/">Eco Bloom</a>
+            <br>
+            <br>
+            <img src="ecobloom.png">
+        </h2>
+    </div>
 </body>
 </html>
